--- a/ControllerSimulation.html
+++ b/ControllerSimulation.html
@@ -176,6 +176,10 @@
             <li>Adaptive Control</li>
             <li>Robust Control</li>
         </ul>
+        <li>Designed and simulated Sliding Mode Control to achieve superior disturbance rejection with near-perfect tracking, and 
+            Adaptive Control to reduce steady-state error by 50% compared to Exact Model Knowledge.</li>
+        <li>Evaluated computational efficiency and stability, finding that Adaptive Control balanced efficiency and performance, 
+            with 20% faster computational time.</li>
 
 
         <!-- Card for Technologies Used -->
