--- a/ElectroPermanentMagneticClamp.html
+++ b/ElectroPermanentMagneticClamp.html
@@ -122,7 +122,10 @@
         <p><a href="portfolio.html">Back to Home</a></p>
         <h1>Two Pole Electro-Permanent Magnet Clamp for Workpiece Holding During Machining</h1>
         <p>This project optimized a two-pole electro-permanent magnetic clamping system designed to replace traditional clamps in machining operations. Iterative design and analysis using Magnetic Circuit Analysis (MCA), Finite Element Method Magnetics (FEMM), and ANSYS software ensured the achievement of performance goals.</p>
-
+        <li>Optimized the design of an Electro-Permanent Magnetic Clamp using Magnetic Circuit Analysis (MCA) and Finite Element 
+            Method Magnetics (FEMM), achieving a vertical reluctance force of 1460.1 lbf.</li>
+        <li>Validated FEMM data through 3D analysis in Ansys Electronics Desktop, ensuring accurate force calculations and 
+            identifying potential saturation effects within the EPMC design.</li>
         <!-- Card for Technologies Used -->
         <div class="card">
             <div class="card-title">Software Used:</div>
