--- a/SakshiShah_Website.html
+++ b/SakshiShah_Website.html
@@ -716,8 +716,9 @@
                         <div class="dropdown-content">
                             <ul>
                                 <li>Research Assistant at the Neuromuscular Control and Robotics Lab, working on enhancing exoskeleton mobility.</li>
-                                <li>Designing and fabricating components to enable lateral movement in the exoskeleton.</li>
-                                <li>Integrating the necessary hardware for seamless functionality and performance improvement.</li>
+                                <li>Designing linkages in SOLIDWORKS for incorporating lateral movement ability in a wearable exoskeleton.</li>
+                                <li>Prototyping and 3D printing parts using an Ultimaker</li>
+                                <li>Selected and integrated motors for smooth and precise actuation.</li>
                             </ul>
                         </div>
                     </div>
@@ -728,10 +729,10 @@
                         <p>Tioga Cardiovascular, Los Gatos, California</p>
                         <div class="dropdown-content">
                             <ul>
-                                <li>Optimized the manufacturing process of the Transcatheter Mitral Valve replacement product.</li>
-                                <li>Designed SLA printed fixtures using SolidWorks for vibration damping and testing the delivery system.</li>
-                                <li>Refined engineering drawings and integrated quality checks for injection-molded components.</li>
-                                <li>Generated approval requests for controlled documents of new and revised parts.</li>
+                                <li>Supported process development and R&D in optimizing the Luna TMVR product's manufacturing process.</li>
+                                <li>Designed SLA-printed fixtures using SolidWorks and Preform for vibration damping and testing the delivery system.</li>
+                                <li>Refined engineering drawings for GD&T, managed approval requests for controlled documents, and ensured quality 
+                                    checks for injection-molded components, improving precision and reducing defects.</li>
                             </ul>
                         </div>
                     </div>
@@ -743,10 +744,16 @@
                         <div class="dropdown-content">
                             <ul>
                                 <li>Worked in the Regulators Department, Medium Voltage Power Distribution.</li>
-                                <li>Improved process efficiency by 34% through Python and Excel VBA automation.</li>
-                                <li>Launched over five projects addressing cost-out, design, and manufacturing challenges.</li>
-                                <li>Led continuous improvement initiatives through cross-functional team collaboration.</li>
-                                <li>Recipient of the Eaton Pratibha Excellence Award and certified in Six Sigma DMAIC.</li>
+                                <li>Managed 250 customer orders from initial inquiry to final delivery and optimized the Engineering-to-Order (ETO)
+                                    process through Python and Excel-VBA-based automation, increasing efficiency by 34%.</li>
+                                <li>Supported the plant by executing 48 Engineering Change Requests (ECRs) and 5 Sustaining Engineering projects for 
+                                   the Medium Voltage regulators team, standardizing processes and reducing labor hours through part drawing revisions, 
+                                   bill of materials (BOM) standardization in SAP, and documentation.</li>
+                                <li> Executed resiliency, Continuous Improvement (CI), and Design for Assembly (DFA) projects. Certified in Six Sigma 
+                                   DMAIC.</li>
+                                <li>Reduced costs through Value Analysis/Value Engineering (VAVE) projects, saving $100K, reducing part variations by 
+                                   96%, minimizing material waste, improving inventory management, and mitigating part shortages.</li>
+                                <li>Collaborated with suppliers and stakeholders to develop ramp-up and ramp-down plans for project implementation.</li>   
                             </ul>
                         </div>
                     </div>
@@ -757,9 +764,12 @@
                         <p>Bamboochi Bicycles, Pune, India</p>
                         <div class="dropdown-content">
                             <ul>
-                                <li>Employed SOLIDWORKS for frame modeling; ANSYS Mechanical, and Fusion 360 for structural analysis of the bamboo frame.</li>
-                                <li>Utilized MATLAB for modeling parameters for optimal bicycle handling quality, stability mechanics, and selection of mechanical/electrical drivetrain components</li>
-                                <li>Designed a bicycle with a fork flop of 150.4278 N/rad and a maximum control sensitivity of 16.2579 rad/ms that could travel at a minimum speed of 2m/s and a maximum speed of 12m/s when pedaling at 50rpm.</li>
+                                <li>Conceptualized and developed a sustainable intercity bicycle utilizing bamboo for frame.</li>
+                                <li>Leveraged  CAD and simulation tools (SOLIDWORKS, Fusion 360) to design a bicycle frame, integrating design 
+                                   simulation tools to support manufacturing feasibility and product development.</li>
+                                <li>Utilized MATLAB for parameter modeling, optimizing bicycle handling and performance characteristics, and performed 
+                                   detailed mechanical analysis using ANSYS Mechanical, achieving a Fork flop of 150.43 N/rad, Maximum control 
+                                   sensitivity of 16.26 rad/ms, Operational speed range of 2-12 m/s at 50 RPM</li>
                             </ul>
                         </div>
                     </div>
