--- a/SmartSortingLine.html
+++ b/SmartSortingLine.html
@@ -175,6 +175,11 @@
             <li>HMI for local control (status, start/stop, alerts)</li>
             <li>ML model for processing time estimation</li>
         </ul>
+        <p>Results</p>
+        <li>Developed a Flask/PostgreSQL web application enabling remote access via Modbus TCP/IP and MQTT.</li>
+        <li>Integrated machine learning models (Linear Regression, Ridge Regression, and Decision Trees) for processing time 
+            prediction, achieving an accuracy of 81.29% (R² = 0.8129, RMSE = 5473.85ms).</li>
+        <li>Integrated sensors and actuators, reducing manual intervention by 50% and decreasing downtime by 30%.</li>
         
         <!-- Card for Technologies Used -->
         <div class="card">
