--- a/VisualServoControl.html
+++ b/VisualServoControl.html
@@ -169,6 +169,12 @@
         <p><a href="portfolio.html">Back to Home</a></p>
         <h1>Visual Servo Control of a 7-Link Kinova Gen3 Robot Arm</h1>
         <p>My role involves developing a closed-loop control system to track a micro swimmer using an ultrasound probe and a 7-link Kinova Gen3 robot arm, as it navigates a viscous medium under vibration forces.</p>
+        <li>Developed a closed-loop control system to track dynamic objects in real-time using an eye-in-hand camera, leveraging 
+        Simulink, ROS, and OpenCV.</li>
+        <li>Designed and fabricated custom End-of-Arm Tooling (EOAT) in SolidWorks to stabilize the ultrasound probe and 
+            support a monocular camera.</li>
+        <li>Implemented real-time image processing and control algorithms (PID, MPC) using MATLAB and GStreamer, reducing 
+            system latency and enhancing tracking precision.</li>
         
         <!-- Card for Technologies Used -->
         <div class="card">
