--- a/portfolio.html
+++ b/portfolio.html
@@ -728,7 +728,7 @@
                         <p class="date-location">May 2024 - August 2024</p>
                         <p>Tioga Cardiovascular, Los Gatos, California</p>
                         <div class="dropdown-content">
-                            <a href="InternshipTioga.pdf"class="project-link" target="_blank">View Projects</a>
+                            <a href="Tioga/InternshipTioga.pdf"class="project-link" target="_blank">View Projects</a>
                             <ul>
                                 <li>Supported process development and R&D in optimizing the <b>Luna TMVR</b> product's manufacturing process.</li>
                                 <li>Designed <b>SLA-printed fixtures</b> using SolidWorks and Preform for vibration damping and testing the delivery system.</li>
