--- a/portfolio.html
+++ b/portfolio.html
@@ -638,7 +638,7 @@
                 <div class="btn-container">
                     <a href="mailto:sshah37@ncsu.edu" class="btn">Email</a>
                     <a href="https://www.linkedin.com/in/sakshi-5hah/" target="_blank" class="btn">LinkedIn</a>
-                    <a href="SakshiShah_Resume.pdf" target="_blank" class="resume-card">Resume</a>
+                    <a href="SakshiShah_Resume.pdf" target="_blank" class="resume-card" type="application/pdf">Resume</a>
                 </div>
             </div>
         </header>
@@ -728,7 +728,9 @@
                         <p class="date-location">May 2024 - August 2024</p>
                         <p>Tioga Cardiovascular, Los Gatos, California</p>
                         <div class="dropdown-content">
-                            <a href="Tioga\InternshipTioga.pdf"class="project-link" target="_blank">View Projects</a>
+                            <a href="Tioga/InternshipTioga.pdf" class="project-link" target="_blank" type="application/pdf" style="font-size: 18px;">
+                                View Projects
+                              </a>
                             <ul>
                                 <li>Supported process development and R&D in optimizing the <b>Luna TMVR</b> product's manufacturing process.</li>
                                 <li>Designed <b>SLA-printed fixtures</b> using SolidWorks and Preform for vibration damping and testing the delivery system.</li>
@@ -764,6 +766,9 @@
                         <p class="date-location">January 2021 - May 2021</p>
                         <p>Bamboochi Bicycles, Pune, India</p>
                         <div class="dropdown-content">
+                            <a href="Bamboochi/Bamboochi_Project.pdf" class="project-link" target="_blank" type="application/pdf" style="font-size: 18px;">
+                                View Project
+                              </a>
                             <ul>
                                 <li>Conceptualized and developed a sustainable intercity bicycle utilizing bamboo for frame.</li>
                                 <li>Leveraged  <b>CAD and simulation</b> tools (SOLIDWORKS, Fusion 360) to design a <b>bicycle frame</b>, integrating design 
