--- a/portfolio.html
+++ b/portfolio.html
@@ -650,7 +650,7 @@
                 <p class="typing-line">I am a master's student in Mechanical Engineering, specializing in dynamics and control systems, with hands-on experience in 3D modeling,</p>
                 <p class="typing-line">  robot path planning, stability analysis, PLC programming, and hardware integration. My time at Eaton and Tioga Cardiovascular has strengthened </p>
                 <p class="typing-line">my expertise in continuous improvement, automation, design for manufacturing, prototyping, and process engineering. I am currently focussed on  </p>
-                <p class="typing-line">designing tooling and linkages, as well as developing control strategies and dynamic system models for real-world applications.</p>                
+                <p class="typing-line">designing tooling and linkages, as well as learning about control theory and dynamic system modeling for real-world applications.</p>                
             </div>
         </section>
 
