--- a/portfolio.html
+++ b/portfolio.html
@@ -647,10 +647,10 @@
         <section id="about-me" class="section" style="margin-top: 0;">
             <h3 class="about-me-text">About Me</h3>
             <div class="typing-container">
-                <p class="typing-line">I am a master's student in Mechanical Engineering, specializing in dynamics and control systems, with hands-on experience in 3D modeling,</p>
-                <p class="typing-line">  robot path planning, stability analysis, PLC programming, and hardware integration. My time at Eaton and Tioga Cardiovascular has strengthened </p>
-                <p class="typing-line">my expertise in continuous improvement, automation, design for manufacturing, prototyping, and process engineering. I am currently focussed on  </p>
-                <p class="typing-line">designing tooling and linkages, as well as learning about control theory and dynamic system modeling for real-world applications.</p>                
+                <p class="typing-line">Master’s student in Mechanical Engineering with a focus on dynamics and control systems. </p>
+                <p class="typing-line"> I have hands-on experience in 3D modeling, robot path planning, and PLC programming.  </p>
+                <p class="typing-line">My work at Eaton and Tioga Cardiovascular helped build my skills in automation, prototyping, and process improvement.  </p>
+                <p class="typing-line">I am currently learning and applying control theory and system modeling to real-world engineering problems.</p>                
             </div>
         </section>
 
