--- a/ControllerSimulation.html
+++ b/ControllerSimulation.html
@@ -168,6 +168,7 @@
     <div class="container">
         <p><a href="portfolio.html">Back to Home</a></p>
         <h1>Tracking Control of a Robot Manipulator with Uncertainties</h1>
+        <p><strong>Objective</strong></p>
         <p>This project focuses on understanding the differences between various nonlinear control design techniques.
             The primary objective is to design, simulate, and compare the performance of three distinct nonlinear
             controllers for a tracking task:</p>
@@ -176,6 +177,8 @@
             <li>Adaptive Control</li>
             <li>Robust Control</li>
         </ul>
+        <p></p>
+        <p><strong>Result</strong></p>
         <li>Designed and simulated Sliding Mode Control to achieve superior disturbance rejection with near-perfect tracking, and 
             Adaptive Control to reduce steady-state error by 50% compared to Exact Model Knowledge.</li>
         <li>Evaluated computational efficiency and stability, finding that Adaptive Control balanced efficiency and performance, 
