--- a/SmartSortingLine.html
+++ b/SmartSortingLine.html
@@ -168,6 +168,7 @@
     <div class="container">
         <p><a href="portfolio.html">Back to Home</a></p>
         <h1>Remote Control and Monitoring of Conveyor System for Package Delivery</h1>
+        <p><strong>Objective:</strong></p>
         <p>This project focused on developing a system that sorts packages by color using a Micro800 PLC. Key features include:</p>
         <ul>
             <li>Real-time data via Modbus TCP/IP and MQTT</li>
@@ -175,7 +176,7 @@
             <li>HMI for local control (status, start/stop, alerts)</li>
             <li>ML model for processing time estimation</li>
         </ul>
-        <p>Results</p>
+        <p><strong>Results:</strong></p>
         <li>Developed a Flask/PostgreSQL web application enabling remote access via Modbus TCP/IP and MQTT.</li>
         <li>Integrated machine learning models (Linear Regression, Ridge Regression, and Decision Trees) for processing time 
             prediction, achieving an accuracy of 81.29% (R² = 0.8129, RMSE = 5473.85ms).</li>
