--- a/CarCruize.html
+++ b/CarCruize.html
@@ -168,8 +168,8 @@
     <div class="container">
         <p><a href="portfolio.html">Back to Home</a></p>
         <h1> Design of an Automobile Cruise Control system</h1>
-        <p>This project designs a state-feedback controller for a car cruise control system using control
-            engineering principles. The open-loop transfer function was derived and analyzed to determine the desired
+        <p>This project aims to design a state-feedback controller for a car cruise control system using control
+            engineering principles. An open-loop transfer function was derived and analyzed to determine the desired
             closed-loop behavior. A desired characteristic equation was computed based on desired parameters, and a
             state-feedback controller was designed to achieve the targeted car dynamics.</p>
 
@@ -193,6 +193,7 @@
         <!-- Image Gallery -->
         <div class="image-container">
             <img src="CarCruize_Simulink.png" alt="PLC Connections">
+            <img src="CarCruize_Simulink_response.png" alt="PLC Connections">
         </div>
     </div>
 
