--- a/CarCruize.html
+++ b/CarCruize.html
@@ -186,7 +186,7 @@
         <div class="card">
             <div class="card-title">Concepts Learned:</div>
             <div class="card-content">
-                Communication Protocols, PLC Programming, Sensor and Actuator Integration, Digital Twin, Machine Learning-based Data Management, IoT, AI/ML in Predictive Maintenance, Cyber-Physical Systems
+                PID Controller Design, State Space Representation, Open and Closed Loop Transfer Function, Nyquist Diagram, Root Locus Staility Analysis, Controllability and Observability
             </div>
         </div>
 
