--- a/portfolio.html
+++ b/portfolio.html
@@ -723,6 +723,7 @@
                 <a href="#skills" class="index-nav-link">Skills</a>
                 <a href="#professional-experience" class="index-nav-link">Experience</a>
                 <a href="#projects" class="index-nav-link">Projects</a>
+                <a href="#timeline" class="index-nav-link">Timeline</a>
             </div>
         </nav>
 
@@ -734,6 +735,7 @@
                     <a href="mailto:sshah37@ncsu.edu" class="btn">Email</a>
                     <a href="https://www.linkedin.com/in/sakshi-5hah/" target="_blank" class="btn">LinkedIn</a>
                     <a href="SakshiShah_Resume.pdf" target="_blank" class="resume-card" type="application/pdf">Resume</a>
+                    <a href="Design_Portfolio.pdf" target="_blank" class="resume-card" type="application/pdf">Design Portfolio</a>
                 </div>
             </div>
         </header>
