--- a/portfolio.html
+++ b/portfolio.html
@@ -917,6 +917,7 @@
             </section>
 
             <section id="timeline" class="timeline">
+            <h2>Journey</h2>
 
             <div class="timeline-entry">
                 <div class="box research">
