--- a/portfolio.html
+++ b/portfolio.html
@@ -976,6 +976,7 @@
      onclick="window.open('Design_Portfolio_PDFs/bamboo_cycle.pdf', '_blank')">
                    <img src="Design_Portfolio_Images/bamboo cycle.png" alt="Design Project 1">
                    <img src="Design_Portfolio_Images/Exo.png" alt="Design Project 3">
+                    <img src="Design_Portfolio_Images/robot_Arm.png" alt="Design Project 4">
                </div>
             </aside>
 
