--- a/VisualServoControl.html
+++ b/VisualServoControl.html
@@ -188,7 +188,7 @@
         <div class="card">
             <div class="card-title">Concepts Learned:</div>
             <div class="card-content">
-                Camera Calibration, Joint Space and Task Space Control, Trajectory Planning, Inverse Kinematics, Object Detection
+                Camera Calibration, Joint Space and Task Space Control, Trajectory Planning, Inverse Kinematics, Forward Kinematics, Object Detection, Jcobian, DH parameters, Interaction Matrix, API connections
             </div>
         </div>
 
