--- a/portfolio.html
+++ b/portfolio.html
@@ -710,10 +710,10 @@
         <section id="about-me" class="section" style="margin-top: 0;">
             <h3 class="about-me-text">About Me</h3>
             <div class="typing-container">
-                <p class="typing-line">Master’s student in Mechanical Engineering with a focus on dynamics and control systems. </p>
-                <p class="typing-line"> I have hands-on experience in 3D modeling, robot path planning, and PLC programming.  </p>
-                <p class="typing-line">My work at Eaton and Tioga Cardiovascular helped build my skills in automation, prototyping, and process improvement.  </p>
-                <p class="typing-line">I am currently learning and applying control theory and system modeling to real-world engineering problems.</p>                
+                <p class="typing-line">Master’s graduate in Mechanical Engineering with a specialization in Dynamics and Controls. </p>
+                <p class="typing-line"> Experienced in product development, automation, and manufacturing through roles at Eaton and Tioga Cardiovascular,  </p>
+                <p class="typing-line">where I executed cost-out projects, developed rapid-prototyping fixtures, and improved assembly processes.</p>
+                <p class="typing-line">Skilled in CAD (SolidWorks), FEA, and mechatronics, with hands-on experience in robot path planning, PLC programming, and control systems.</p>             
             </div>
         </section>
 
